--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,9 @@ platform = espressif32
 board = airm2m_core_esp32c3
 framework = arduino
 lib_deps = 
-
+	zinggjm/GxEPD2@^1.6.7
+	sparkfun/SparkFun BNO080 Cortex Based IMU@^1.1.12
+	mikalhart/TinyGPSPlus@^1.1.0
 monitor_speed = 115200
 upload_protocol = esptool
 build_flags = 
